<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_example"
        android:orderInCategory="100"
        app:showAsAction = "always"
        android:title="Action settings"
        android:icon="@drawable/options">
        <menu>
            <item android:id="@+id/changeLanguage" android:title="@string/change_language">
                <menu>
                    <item android:id="@+id/changeLanguageEnglish" android:title="@string/english"/>
                    <item android:id="@+id/changeLanguageHebrew" android:title="@string/hebrew"/>
                </menu>
            </item>
            <item android:id="@+id/exitApplication" android:title="@string/exit_application"/>
            <item android:id="@+id/deleteMovies" android:title="@string/delete_movies"/>
        </menu>
    </item>
</menu>