<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.likhtman.imdbfavouritemovies.fragments.InternetSearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/add_movie_frominternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/addFromInternet" />

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/searchLayout"
            android:layout_below="@id/addFromInternet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/search_movie_from_internet"
                android:layout_toLeftOf="@+id/btnSearch"
                android:layout_toStartOf="@+id/btnSearch"
                android:drawableLeft="@drawable/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:background="@null"
                android:id="@+id/searchFromInternet"/>

            <Button
                android:text="@string/search"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="12dp"
                android:layout_margin="0dp"
                android:id="@+id/btnSearch"/>
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/cancelSearchButton">

            <Button
                android:textSize="12dp"
                android:layout_gravity="center"
                android:layout_alignParentBottom="true"
                android:id="@+id/cancelIntenetSearch"
                android:text="@string/cancel_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_above="@id/cancelSearchButton"
            android:layout_below="@id/searchLayout"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</FrameLayout>